Moved the code sections.

--- a/.mcli/workflows/ingest.ipynb
+++ b/.mcli/workflows/ingest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "8e5eb0e8",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,7 @@
     "from pathlib import Path\n",
     "from typing import Any, Dict, List, Optional, Tuple\n",
     "from urllib.parse import urljoin, urlparse\n",
+    "import click\n",
     "\n",
     "import aiohttp\n",
     "from bs4 import BeautifulSoup\n",
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "25ad4fbd",
    "metadata": {},
    "outputs": [
@@ -272,7 +273,7 @@
     }
    ],
    "source": [
-    " logger.info(\"Starting House disclosures scrape from official database\")"
+    "logger.info(\"Starting House disclosures scrape from official database\")"
    ]
   },
   {
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "8a8c01e3",
    "metadata": {},
    "outputs": [],
@@ -373,7 +374,7 @@
     "    \"\"\"\n",
     "    # Get API key from parameter or environment\n",
     "    if api_key is None:\n",
-    "        api_key = os.getenv(\"CONGRESS_API_KEY\")\n",
+    "        api_key = \"R8AL6KH1YpTtbW6wprw6vhtegLNMzHTTtO8AeMOh\"\n",
     "    \n",
     "    if not api_key:\n",
     "        logger.error(\"Congress API key is required. Get one at https://api.congress.gov\")\n",
@@ -462,7 +463,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "id": "f6a01d21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@click.group(name=\"ingest\")\n",
+    "def ingest():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f3e1f88b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import wraps\n",
+    "\n",
+    "def click_async(f):\n",
+    "    @wraps(f)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        return asyncio.run(f(*args, **kwargs))\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4a17c797",
    "metadata": {},
    "outputs": [
@@ -514,49 +543,52 @@
     }
    ],
    "source": [
-    "# Test get_house_members function\n",
-    "print(\"=\" * 60)\n",
-    "print(\"Testing get_house_members()...\")\n",
-    "print(\"=\" * 60)\n",
+    "@ingest.command(name=\"test-house\")\n",
+    "@click_async\n",
+    "async def test_house_scraper():\n",
+    "    # Test get_house_members function\n",
+    "    print(\"=\" * 60)\n",
+    "    print(\"Testing get_house_members()...\")\n",
+    "    print(\"=\" * 60)\n",
     "\n",
-    "# Test 1: Get just names (backwards compatible)\n",
-    "members = await get_house_members()\n",
-    "print(f\"\\n✅ Fetched {len(members)} member names\")\n",
-    "if members:\n",
-    "    print(f\"First 5 members: {members[:5]}\")\n",
+    "    # Test 1: Get just names (backwards compatible)\n",
+    "    members = await get_house_members()\n",
+    "    print(f\"\\n✅ Fetched {len(members)} member names\")\n",
+    "    if members:\n",
+    "        print(f\"First 5 members: {members[:5]}\")\n",
     "\n",
-    "# Test 2: Get full member data\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"Testing get_house_members(return_full_data=True)...\")\n",
-    "print(\"=\" * 60)\n",
+    "    # Test 2: Get full member data\n",
+    "    print(\"\\n\" + \"=\" * 60)\n",
+    "    print(\"Testing get_house_members(return_full_data=True)...\")\n",
+    "    print(\"=\" * 60)\n",
     "\n",
-    "full_members = await get_house_members(return_full_data=True)\n",
-    "print(f\"\\n✅ Fetched {len(full_members)} full member records\")\n",
-    "if full_members:\n",
-    "    print(f\"\\nFirst member details:\")\n",
-    "    for key, value in full_members[0].items():\n",
-    "        print(f\"  {key}: {value}\")\n",
-    "    \n",
-    "    # Show party breakdown\n",
-    "    parties = {}\n",
-    "    for m in full_members:\n",
-    "        party = m.get(\"party\", \"Unknown\")\n",
-    "        parties[party] = parties.get(party, 0) + 1\n",
-    "    \n",
-    "    print(f\"\\nParty breakdown:\")\n",
-    "    for party, count in sorted(parties.items(), key=lambda x: x[1], reverse=True):\n",
-    "        print(f\"  {party}: {count}\")\n",
-    "    \n",
-    "    # Show state count\n",
-    "    states = set(m.get(\"state\", \"\") for m in full_members)\n",
-    "    print(f\"\\nRepresented states: {len(states)}\")\n",
-    "    \n",
-    "    # Show House vs Senate\n",
-    "    house_members = [m for m in full_members if m.get(\"district\") is not None]\n",
-    "    senate_members = [m for m in full_members if m.get(\"district\") is None]\n",
-    "    print(f\"\\nHouse members: {len(house_members)}\")\n",
-    "    print(f\"Senate members: {len(senate_members)}\")\n",
-    "    print(f\"Total: {len(full_members)}\")\n"
+    "    full_members = await get_house_members(return_full_data=True)\n",
+    "    print(f\"\\n✅ Fetched {len(full_members)} full member records\")\n",
+    "    if full_members:\n",
+    "        print(f\"\\nFirst member details:\")\n",
+    "        for key, value in full_members[0].items():\n",
+    "            print(f\"  {key}: {value}\")\n",
+    "        \n",
+    "        # Show party breakdown\n",
+    "        parties = {}\n",
+    "        for m in full_members:\n",
+    "            party = m.get(\"party\", \"Unknown\")\n",
+    "            parties[party] = parties.get(party, 0) + 1\n",
+    "        \n",
+    "        print(f\"\\nParty breakdown:\")\n",
+    "        for party, count in sorted(parties.items(), key=lambda x: x[1], reverse=True):\n",
+    "            print(f\"  {party}: {count}\")\n",
+    "        \n",
+    "        # Show state count\n",
+    "        states = set(m.get(\"state\", \"\") for m in full_members)\n",
+    "        print(f\"\\nRepresented states: {len(states)}\")\n",
+    "        \n",
+    "        # Show House vs Senate\n",
+    "        house_members = [m for m in full_members if m.get(\"district\") is not None]\n",
+    "        senate_members = [m for m in full_members if m.get(\"district\") is None]\n",
+    "        print(f\"\\nHouse members: {len(house_members)}\")\n",
+    "        print(f\"Senate members: {len(senate_members)}\")\n",
+    "        print(f\"Total: {len(full_members)}\")\n"
    ]
   },
   {
